--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div class="bmi-container">
-    <h2>BMI Calculator</h2>
+    <h2>BMI-Calculator</h2>
     <label for="weight">Weight (kg):</label>
     <input type="number" id="weight" placeholder="e.g. 65">
 
